nst/src/snapshots/transmute_nst__exit_points_resolver__tests__binary_never_returns.snap
---
source: nst/src/exit_points_resolver.rs
expression: "(ast, block_exit_points)"
---
(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "x",
            IdentId(2) => "a",
            IdentId(3) => "add",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 3:17; [33, 36],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 3:17; [33, 36],
                    },
                ),
                span: 3:17; [33, 36],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 3:21; [37, 39],
                    },
                ),
                span: 3:21; [37, 39],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(43),
                        span: 3:25; [41, 43],
                    },
                ),
                span: 3:25; [41, 43],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: FunctionCall(
                    ExprId(0),
                    [
                        ExprId(1),
                        ExprId(2),
                    ],
                ),
                span: 3:17; [33, 44],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Literal(
                    Literal {
                        kind: Number(44),
                        span: 4:13; [58, 60],
                    },
                ),
                span: 4:13; [58, 60],
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: Block(
                    [
                        StmtId(1),
                        StmtId(2),
                    ],
                ),
                span: 2:15; [15, 67],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(3),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Let(
                    Identifier {
                        id: IdentId(2),
                        span: 3:13; [29, 30],
                    },
                    ExprId(3),
                ),
                span: 3:9; [25, 45],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Ret(
                    Some(
                        ExprId(4),
                    ),
                    Explicit,
                ),
                span: 4:9; [54, 61],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:9; [9, 10],
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(5),
                ),
                span: 2:5; [5, 67],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
    [
        (
            ExprId(5),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(4),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
    ],
)
