nst/src/snapshots/transmute_nst__exit_points_resolver__tests__function_call_parameter_always_returns.snap
---
source: nst/src/exit_points_resolver.rs
expression: "(ast, block_exit_points)"
---
(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "x",
            IdentId(2) => "a",
            IdentId(3) => "number",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 2:14; [14, 20],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 3:9; [34, 35],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(1),
                        span: 3:9; [34, 35],
                    },
                ),
                span: 3:9; [34, 35],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 3:14; [39, 43],
                    },
                ),
                span: 3:14; [39, 43],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 3:25; [50, 52],
                    },
                ),
                span: 3:25; [50, 52],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(1),
                    ],
                ),
                span: 3:19; [44, 55],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Literal(
                    Literal {
                        kind: Number(43),
                        span: 3:42; [67, 69],
                    },
                ),
                span: 3:42; [67, 69],
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: Block(
                    [
                        StmtId(2),
                    ],
                ),
                span: 3:36; [61, 72],
            },
            ExprId(6) => Expression {
                id: ExprId(6),
                kind: If(
                    ExprId(1),
                    ExprId(3),
                    Some(
                        ExprId(5),
                    ),
                ),
                span: 3:11; [36, 72],
            },
            ExprId(7) => Expression {
                id: ExprId(7),
                kind: FunctionCall(
                    ExprId(0),
                    [
                        ExprId(6),
                    ],
                ),
                span: 3:9; [34, 73],
            },
            ExprId(8) => Expression {
                id: ExprId(8),
                kind: Literal(
                    Literal {
                        kind: Number(44),
                        span: 4:13; [87, 89],
                    },
                ),
                span: 4:13; [87, 89],
            },
            ExprId(9) => Expression {
                id: ExprId(9),
                kind: Block(
                    [
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 2:24; [24, 96],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(5),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Ret(
                    Some(
                        ExprId(2),
                    ),
                    Explicit,
                ),
                span: 3:21; [46, 53],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Ret(
                    Some(
                        ExprId(4),
                    ),
                    Explicit,
                ),
                span: 3:38; [63, 70],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Expression(
                    ExprId(7),
                ),
                span: 3:9; [34, 74],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Ret(
                    Some(
                        ExprId(8),
                    ),
                    Explicit,
                ),
                span: 4:9; [83, 90],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:9; [9, 10],
                    },
                    [],
                    [
                        Parameter {
                            identifier: Identifier {
                                id: IdentId(2),
                                span: 2:11; [11, 12],
                            },
                            type_def_id: TypeDefId(0),
                            span: 2:11; [11, 20],
                        },
                    ],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(9),
                ),
                span: 2:5; [5, 96],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 2:14; [14, 20],
            },
        ],
        root: StmtId(0),
    },
    [
        (
            ExprId(3),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(2),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(5),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(4),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(9),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(2),
                        ),
                    ),
                    Explicit(
                        Some(
                            ExprId(4),
                        ),
                    ),
                ],
                unreachable: [
                    ExprId(8),
                ],
            },
        ),
    ],
)
